; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/planck/light/extr_light.c_rgb_matrix_map_row_column_to_led_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/planck/light/extr_light.c_rgb_matrix_map_row_column_to_led_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rgb_matrix_map_row_column_to_led_kb(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load i32, i32* %5, align 4
  %9 = icmp eq i32 %8, 3
  br i1 %9, label %10, label %16

10:                                               ; preds = %3
  %11 = load i32, i32* %6, align 4
  %12 = icmp eq i32 %11, 5
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i32*, i32** %7, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 0
  store i32 42, i32* %15, align 4
  store i32 1, i32* %4, align 4
  br label %17

16:                                               ; preds = %10, %3
  store i32 0, i32* %4, align 4
  br label %17

17:                                               ; preds = %16, %13
  %18 = load i32, i32* %4, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
